# wsm_Mind

./: .gitignore  DataParser.py  IR_functions.py  main.ipynb  make_truth.ipynb  pyproject.toml  test_preds.py  test_test.py  test_valid.py
Recommenders/reco_utils/: newsrec_utils.py
download/: download_test.py  download_valid_and_train.py
download/Recommenders/reco_utils/: deeprec_utils.py
embeding/: embeder.ipynb  embeder.py  embeder_better_way.py  loader.py
newsinfo/: .news_embed.vec.swp
result/: prediction.txt
src/: DataParser.py  IR_functions.py  evaluate.py  main.ipynb  main.py  makeTruth.py
test/: behaviors.tsv
